--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -213,7 +213,7 @@ template(name='delta_result')
                             //- i.eye.icon
                             each viewer_usernames
                                 .ui.small.basic.label #{this}
-                        +comments
+                        //- +comments
                     if is_admin
                         +remove_button
             
