--- a/components/work_order.jade
+++ b/components/work_order.jade
@@ -4,8 +4,8 @@ template(name='work_orders')
         .row
             .twelve.wide.column
                 .ui.inline.header
-                    +i name='dashboard'
-                    |owner portal
+                    +i name='work'
+                    |work orders
                 .ui.inline.grey.header
                     |your unit
                     |##{currentUser.unit_number}
