--- a/client/users.jade
+++ b/client/users.jade
@@ -2,7 +2,7 @@ template(name='residents')
     .ui.padded.grid
         .row
             .sixteen.wide.column
-                .ui.left.icon.huge.fluid.input
+                .ui.left.icon.large.fluid.input
                     i.search.icon
                     input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
@@ -13,7 +13,7 @@ template(name='profiles')
     .ui.padded.grid
         .row
             .sixteen.wide.column
-                .ui.left.icon.huge.fluid.input
+                .ui.left.icon.large.fluid.input
                     i.search.icon
                     input.username_search(type='text' placeholder='lookup profiles...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
@@ -24,12 +24,12 @@ template(name='owners')
     .ui.padded.grid
         .row
             .sixteen.wide.column
-                .ui.left.icon.huge.fluid.input
+                .ui.left.icon.large.fluid.input
                     i.search.icon
                     input.username_search(type='text' placeholder='lookup owner...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
                     each owners
-                        +profile
+                        +owner
                 
 template(name='users') 
     .ui.padded.grid
@@ -39,7 +39,7 @@ template(name='users')
                 //-     +i name='groups'
                 //-     //- i.users.icon
                 //-     |users
-                .ui.left.icon.huge.fluid.input
+                .ui.left.icon.large.fluid.input
                     i.search.icon
                     input.username_search(type='text' placeholder='lookup user...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
@@ -108,3 +108,35 @@ template(name='profile')
                     strong #{this}
             +text_view key='first_name' label='First Name'
             +text_view key='last_name' label='Last Name'
+
+
+
+
+
+                
+template(name='owner')                
+    .ui.card
+        .image
+            //- a(href="/user/#{username}/")
+            //- img(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
+            if kiosk_photo
+                a.zoom(href="/user/#{username}/")
+                    img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
+            else if image_id
+                a.zoom(href="/user/#{username}/")
+                    img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
+        .content
+            a(href="/user/#{username}/")
+                h2.ui.center.aligned.header #{first_name} #{last_name} 
+                .ui.small.header @#{username}
+            +text_view key='first_name' label='first name' direct=true
+            +text_view key='last_name' label='last name' direct=true
+            +text_view key='address' label='address' direct=true
+            +number_view key='unit_number' label='Unit #' direct=true
+            +number_view key='building_number' label='building #' direct=true
+            +text_view key='email' label='email' direct=true
+            +phone_view key='phone' label='phone' direct=true
+            +date_view key='start_date' label='start date' direct=true
+            +date_view key='expiration_date' label='expiration date' direct=true
+            +array_view key='roles' label='roles' direct=true
+            
